--- a/MplabX_template/Template.X/nbproject/Makefile-genesis.properties
+++ b/MplabX_template/Template.X/nbproject/Makefile-genesis.properties
@@ -1,9 +1,15 @@
 #
-#Fri Mar 31 15:41:09 CEST 2017
-default.languagetoolchain.dir=E\:\\Program Files (x86)\\Microchip\\xc8\\v1.40\\bin
-configurations-xml=8cb44dab1b8c69923cf55d41d22b93c2
+#Fri Mar 31 16:20:44 CEST 2017
+Assembly.languagetoolchain.version=5.71
+XC8.languagetoolchain.version=1.40
+SDCC.languagetoolchain.dir=e\:\\Program Files\\SDCC\\bin
+conf.ids=XC8,SDCC,Assembly
+SDCC.languagetoolchain.version=3.6.0
+configurations-xml=e8d7c9a53891b0b47a53f542319b6f38
+Assembly.com-microchip-mplab-nbide-toolchainMPASMWIN-MPASMWINLanguageToolchain.md5=282680811e97de6ea077dc993208b225
+XC8.com-microchip-mplab-nbide-toolchainXC8-XC8LanguageToolchain.md5=8ca5a2607d753baa0cc4f860edd494dd
+SDCC.org-laczik-toolchainSDCC-SDCCtoolchain.md5=8c51c5cad32bcb8a541ead1b18b33bf3
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=671be5dae89725b69579225ccba7468e
-default.languagetoolchain.version=1.40
+Assembly.languagetoolchain.dir=E\:\\Program Files (x86)\\Microchip\\MPLABX\\v3.50\\mpasmx
+XC8.languagetoolchain.dir=E\:\\Program Files (x86)\\Microchip\\xc8\\v1.40\\bin
 host.platform=windows
-conf.ids=default
-default.com-microchip-mplab-nbide-toolchainXC8-XC8LanguageToolchain.md5=8ca5a2607d753baa0cc4f860edd494dd
